tech_immersion/retail_v2.0/back-gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "http-hc-config"}'
spec:
  type: NodePort
  selector:
    app: middleware-etsy
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
