tech_immersion/retail_v2.0/front-gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: front-etsy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
