tech_immersion/retail_v2.0/ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etsy-l7lb-back
  annotations:
    ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-etsy-ip-back"
    ingress.gcp.kubernetes.io/pre-shared-cert: "et-certificate"
  labels:
    app: middleware-etsy
spec:
  rules:
  - host: etsy-middleware.sonrobots.net
    http:
      paths:
      - path: /vais
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 8000
      - path: /gemini
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 8000
