tech_immersion/retail_v2.0/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etsy-l7lb-front
  annotations:
    ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-etsy-ip-front"
    ingress.gcp.kubernetes.io/pre-shared-cert: "et-certificate"
  labels:
    app: front-etsy
spec:
  rules:
  - host: etsy.sonrobots.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
